modified:   Makefile modified:   vivado_ci.yml modified:   vivado_ci_diff.yml

--- a/vivado_ci.yml
+++ b/vivado_ci.yml
@@ -17,6 +17,7 @@ jobs:
     - name: Simulate
       shell: bash
       run: |
+        git submodule update --init --recursive
         make CI
 
     - name: Fail if Simulation Contains Fails
