--- a/vivado_ci_diff.yml
+++ b/vivado_ci_diff.yml
@@ -24,6 +24,7 @@ jobs:
     - name: Simulate
       shell: bash
       run: |
+        git submodule update --init --recursive
         make CI
 
     - name: Fail if Simulation Contains Fails
